Update Obstacles.java